@@ -19,6 +19,8 @@
   * Support parsing git mbox patches without a version tail, as generated by
     Mercurial.  (Jelmer Vernooij)
 
+  * Fix dul-receive-pack and dul-upload-pack. (Jelmer Vernooij)
+
  DOCUMENTATION
 
   * Run the tutorial inside the test suite. (Jelmer Vernooij)
